fix some bugs, like z-index error, add responsobility for createExhibition

--- a/client/src/Components/UI/Message/style.css
+++ b/client/src/Components/UI/Message/style.css
@@ -15,6 +15,7 @@
 
 .show {
     transform: translateX(0%);
+    z-index: 5000;
 }
 .hide {
     transform: sideOutRight 2s forwards;
