--- a/client/src/Components/UI/PopupConfirmation/style.css
+++ b/client/src/Components/UI/PopupConfirmation/style.css
@@ -29,3 +29,21 @@
 .popup__container::-webkit-scrollbar {
     display: none;
 }
+
+
+.popup__top{
+    padding: 20px;
+}
+
+.popup__top-title{
+    padding: 0;
+}
+
+@media (max-width: 769px) {
+    .popup .form__block{
+        max-width: 100%;
+    }
+    .popupConfirmation__form{
+        padding-bottom: 20px;
+    }
+}
